# mpzsql_azinfra

./: Dockerfile  GITHUB_SECRETS.md  README.md  UPLOAD_CERTIFICATES.md  entrypoint.sh  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: README.md  build-and-push-image.yml  copilot-instructions.md  copilot-setup-steps.yml  deploy-example.yml  deploy-to-container-app.yml  register-azure-providers.yml  test-docker-build.yml  workflows-bicep-whatif-new-infra.yml  workflows-deploy-new-infra.yml
INFRA-NEW/: README.md  VALIDATION_SCRIPT_SUMMARY.md  main.bicep  main.bicepparam  role-assignments.bicep  role-assignments.bicepparam  test-identity-extraction.sh  test-secret-extraction.sh  test-template.sh  validate-bicep.sh
INFRA-NEW/compiled/: main.json
scripts/: CERTIFICATE_UPLOAD.md  README.md  build-image.sh  download-mpzsql.sh  run-client.sh  run-container.sh  run_cert_upload.sh  run_set_gh_secrets.sh  set_cert_secrets.py  setup.sh  test-client.sh  test_cert_upload.sh  upload_certs.sh
scripts/networking/: manual.vpn.md
scripts/python/: set_gh_secrets.py
